--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -1,11 +1,12 @@
 :root {
     font-size: 80.5%;
-    --color-background: rgb(247, 246, 243);
+    --color-background: rgba(223, 223, 222, 0.384);
     --color-text-base: #6e6e6ee6;
     --color-text-title: rgb(247, 246, 243);
     --color-form: white;
-    --color-head: #889cad;
-    --color-head2: #99afc2;
+    --color-head: #406fc0;
+    --color-head2: #557dc2;
+    
 }
 
 
@@ -29,7 +30,8 @@ body,
 input,
 button,
 textarea {
-    font: 500 1.6rem;
+    font-family: 'Roboto', sans-serif;
+    font: 300 1rem;
     height: 100%;
 }
 
@@ -63,12 +65,12 @@ input {
     border: none;
     background: var(--color-background);
     color: var(--color-text-base);
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     padding: 1rem;
     font-size: 1.0rem;
     border-radius: 7px;
-    width: 20rem;
-    height: 3.5rem;
+    width: 17rem;
+    height: 3rem;
 
     outline: none;
 }
@@ -85,13 +87,13 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* outline: none;    */
     background: var(--color-head);
     color: white;
-    padding: 1.5rem 5rem;
     border: none;
     border-radius: .5rem;
-    margin-top: 2rem;
+    /* outline: none;    */
+    /* padding: 1.5rem 5rem; */
+    /* margin-top: 2rem; */
 }
 
 button:hover {
@@ -108,4 +110,13 @@ button:hover {
 a {
     text-decoration: none;
     color: var(--color-text-base)
+}
+
+#buttons {
+    margin-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+
 }
